--- a/stylesheet/main.css
+++ b/stylesheet/main.css
@@ -10,7 +10,7 @@
 }
 
 :root {
-  --primary: #4B4D9C;
+  --primary: #4b4d9c;
   --secondary: #393e46;
   --bg-color: #242424;
   --txt-color: #ffffff;
@@ -114,7 +114,7 @@ header nav .active::before {
 .hmPage {
   padding-top: 5rem;
   position: relative;
-  background: url(../assets/BG.png) center/cover no-repeat;
+  background: url(../assets/BG.webp) center/cover no-repeat;
   min-height: 700px;
   height: 100vh;
   max-height: 1000px;
