--- a/stylesheet/main.scss
+++ b/stylesheet/main.scss
@@ -8,7 +8,7 @@
   -webkit-tap-highlight-color: transparent;
 }
 :root {
-  --primary: #4B4D9C;
+  --primary: #4b4d9c;
   --secondary: #393e46;
   --bg-color: #242424;
   --txt-color: #ffffff;
@@ -83,7 +83,7 @@ header {
 .hmPage {
   padding-top: 5rem;
   position: relative;
-  background: url(../assets/BG.png) center/cover no-repeat;
+  background: url(../assets/BG.webp) center/cover no-repeat;
   min-height: 700px;
   height: 100vh;
   max-height: 1000px;
