--- a/stylesheet/main.scss
+++ b/stylesheet/main.scss
@@ -86,7 +86,7 @@ header {
   background: url(../assets/BG.webp) center/cover no-repeat;
   min-height: 700px;
   height: 100vh;
-  max-height: 1000px;
+  max-height: 800px;
   overflow: hidden;
   display: flex;
   flex-direction: row;
@@ -102,6 +102,7 @@ header {
       font-size: 2.5rem;
       line-height: 2.5rem;
       letter-spacing: -1px;
+      width: 600px;
       span {
         color: var(--primary);
         filter: brightness(140%) hue-rotate(0deg);
@@ -137,6 +138,282 @@ header {
     position: absolute;
   }
 }
+@media (max-width: 1616px) {
+  .hmPage {
+    .hmContent {
+      .sm-txt {
+        font-size: 1rem;
+      }
+      h2 {
+        font-size: 2rem;
+        width: 500px;
+      }
+      .sm-about {
+        font-size: 0.8rem;
+        width: 30vw;
+      }
+    }
+  }
+}
+@media (max-width: 1413px) {
+  .hmPage {
+    .hmContent {
+      .sm-txt {
+        font-size: 1vw;
+      }
+      h2 {
+        font-size: 2.6vw;
+        line-height: 2rem;
+      }
+      .sm-about {
+        font-size: 1.2vw;
+        width: 35vw;
+      }
+    }
+    .artwork {
+      width: 60vw;
+      min-width: auto;
+    }
+    .btn {
+      padding: 0.8rem 1.5rem;
+      font-size: 0.9rem;
+    }
+  }
+}
+@media (max-width: 1130px) {
+  .hmPage {
+    .hmContent {
+      h2 {
+        width: 400px;
+      }
+    }
+  }
+}
+@media (max-width: 1000px) {
+  header {
+    img {
+      width: 8rem;
+    }
+    nav {
+      a {
+        font-size: 0.9rem;
+      }
+    }
+  }
+  .hmPage {
+    min-height: 600px;
+    max-height: 600px;
+    .hmContent {
+      .sm-about {
+        margin-top: 1rem;
+      }
+
+      .btn {
+        margin-top: 2rem;
+        padding: 0.6rem 1.1rem;
+        font-size: 0.8rem;
+      }
+    }
+  }
+}
+
+@media (max-width: 900px) {
+  header {
+    img {
+      width: 8rem;
+    }
+    nav {
+      a {
+        font-size: 0.8rem;
+      }
+    }
+  }
+  .hmPage {
+    min-height: fit-content;
+    max-height: fit-content;
+    height: fit-content;
+    padding-top: 8rem;
+    padding-bottom: 3rem;
+    .hmContent {
+      margin-right: 2rem;
+      .sm-txt {
+        font-size: 0.8rem;
+      }
+      h2 {
+        font-size: 1.6rem;
+        line-height: 1.6rem;
+        width: 340px;
+      }
+      .sm-about {
+        font-size: 0.8rem;
+        width: 300px;
+        line-height: 1rem;
+      }
+    }
+    .artwork {
+      width: 400px;
+      min-width: 400px;
+    }
+    .btn {
+      padding: 0.8rem 1.5rem;
+      font-size: 0.9rem;
+    }
+  }
+}
+
+@media (max-width: 800px) {
+  header {
+    nav {
+      a {
+        font-size: 0.7rem;
+      }
+    }
+  }
+  .hmPage {
+    .hmContent {
+      .sm-txt {
+        font-size: 0.6rem;
+      }
+      h2 {
+        font-size: 1.2rem;
+        width: 250px;
+      }
+      .sm-about {
+        font-size: 0.6rem;
+        line-height: 0.9rem;
+        width: fit-content;
+        min-width: 200px;
+      }
+      .btn {
+        font-size: 0.6rem;
+      }
+    }
+    .artwork {
+      min-width: 350px;
+    }
+  }
+}
+@media (max-width: 620px) {
+  header {
+    padding: 1.8rem 10%;
+    img {
+      width: 100px;
+    }
+    nav {
+      display: none;
+    }
+  }
+  .hmPage {
+    padding-top: 7rem;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: flex-start;
+    min-height: 540px;
+    .hmContent {
+      .sm-txt {
+        font-size: 0.8rem;
+        text-align: left;
+      }
+      h2 {
+        font-size: 1.6rem;
+        width: 100%;
+        line-height: 2rem;
+        text-align: left;
+        width: 400px;
+      }
+      .sm-about {
+        font-size: 0.8rem;
+        line-height: 1.2rem;
+        min-width: 200px;
+        width: 100%;
+        text-align: left;
+      }
+      .btn {
+        font-size: 0.9rem;
+        padding: 0.8rem 1.2rem;
+      }
+    }
+    .artwork {
+      width: 100%;
+      transform: rotateY(180deg) translateX(15vw) scale(1.2);
+      height: 200px;
+    }
+  }
+}
+
+@media (max-width: 470px) {
+  .hmPage {
+    .hmContent {
+      h2 {
+        width: fit-content;
+      }
+    }
+  }
+}
+@media (max-width: 470px) {
+  .hmPage {
+    .hmContent {
+      display: flex;
+      flex-direction: column;
+      h2 {
+        font-size: 1.7rem;
+        line-height: 1.8rem;
+      }
+      .sm-txt {
+        font-size: 0.7rem;
+      }
+      .sm-about {
+        font-size: 0.85rem;
+        line-height: 1rem;
+        margin-bottom: 1.5rem;
+      }
+      .btn {
+        margin: 0;
+        margin-top: 1rem;
+      }
+    }
+    .artwork {
+      width: 100%;
+      transform: rotateY(180deg) translateX(20px) scale(1.2);
+      height: 200px;
+    }
+  }
+}
+@media (max-width: 310px) {
+  .hmPage {
+    .hmContent {
+      h2 {
+        font-size: 1.4rem;
+        line-height: 1.6rem;
+      }
+      .sm-txt {
+        font-size: 0.6rem;
+      }
+      .sm-about {
+        font-size: 0.7rem;
+        line-height: 0.9rem;
+        margin-bottom: 1.4rem;
+      }
+      .btn {
+        margin: 0;
+        margin-top: 1rem;
+        font-size: 0.8rem;
+        padding: .6rem 1rem;
+      }
+    }
+    .artwork {
+      width: 100%;
+      transform: rotateY(180deg) translateX(50px) scale(1.2);
+      height: 150px;
+    }
+  }
+}
+@media (max-width: 230px) {
+  main{
+    display: none;
+  }
+}
+
 .btn {
   border: none;
   padding: 0.8rem 2rem;
