--- a/stylesheet/main.css
+++ b/stylesheet/main.css
@@ -21,6 +21,99 @@ body {
   color: var(--txt-color);
 }
 
+/* Components */
+.btn {
+  border: none;
+  padding: 0.8rem 2rem;
+  font-size: 1rem;
+  color: #ffffff;
+  background-color: var(--primary);
+  border-radius: 4pt;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  -webkit-box-shadow: 4px 5px 15px -5px #0000006c;
+          box-shadow: 4px 5px 15px -5px #0000006c;
+}
+
+.btn::before {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  content: "";
+  display: block;
+  height: 100%;
+  width: 100%;
+  background-color: #00000025;
+  opacity: 0;
+  -webkit-transition: opacity 0.4s ease;
+  transition: opacity 0.4s ease;
+}
+
+.btn::after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  content: "";
+  display: block;
+  height: 5px;
+  width: 0%;
+  opacity: 0;
+  background-color: #00000046;
+  -webkit-transition: opacity 0.2s ease, width 0.4s ease;
+  transition: opacity 0.2s ease, width 0.4s ease;
+}
+
+.btn:hover::before {
+  opacity: 1;
+}
+
+.btn:focus::after {
+  width: 100%;
+  opacity: 1;
+}
+
+.btn:active {
+  -webkit-transform: translateY(2px);
+          transform: translateY(2px);
+  -webkit-box-shadow: 4px 0px 15px -5px #00000054;
+          box-shadow: 4px 0px 15px -5px #00000054;
+}
+
+.bg-none {
+  background-color: transparent;
+}
+
+.td-none {
+  text-decoration: none;
+}
+
+.shadow-none {
+  -webkit-box-shadow: none !important;
+          box-shadow: none !important;
+}
+
+.shadow-less {
+  -webkit-box-shadow: 5px 2px 20px -5px #00000049;
+          box-shadow: 5px 2px 20px -5px #00000049;
+}
+
+.btn-secondary {
+  background-color: var(--secondary) !important;
+}
+
+.txt-primary {
+  color: var(--primary) !important;
+}
+
+.btn-sm {
+  padding: 0.5rem 1.2rem !important;
+}
+
+/* Components End */
 header {
   z-index: 50;
   position: absolute;
@@ -111,6 +204,7 @@ header nav .active::before {
   margin: 0 10%;
 }
 
+/* Home */
 .hmPage {
   padding-top: 5rem;
   position: relative;
@@ -192,6 +286,7 @@ header nav .active::before {
 .hmPage canvas {
   z-index: 1;
   position: absolute;
+  pointer-events: none;
 }
 
 @media (max-width: 1616px) {
@@ -443,7 +538,7 @@ header nav .active::before {
     margin: 0;
     margin-top: 1rem;
     font-size: 0.8rem;
-    padding: .6rem 1rem;
+    padding: 0.6rem 1rem;
   }
   .hmPage .artwork {
     width: 100%;
@@ -459,86 +554,301 @@ header nav .active::before {
   }
 }
 
-.btn {
-  border: none;
-  padding: 0.8rem 2rem;
-  font-size: 1rem;
-  color: #ffffff;
-  background-color: var(--primary);
-  border-radius: 4pt;
-  cursor: pointer;
-  position: relative;
-  overflow: hidden;
-  -webkit-box-shadow: 4px 5px 15px -5px #0000006c;
-          box-shadow: 4px 5px 15px -5px #0000006c;
+/* Home End */
+/* Services */
+.services {
+  width: 100%;
+  background-color: var(--bg-color);
 }
 
-.btn::before {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  content: "";
-  display: block;
+.services figure {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  position: relative;
+  background-color: #ffffff;
+  color: #242424;
+}
+
+.services figure .img {
+  background: -webkit-gradient(linear, left top, left bottom, from(#b3e1fff8), to(#98c7e6ee)), url("../assets/abstBack.svg") center/cover;
+  background: linear-gradient(#b3e1fff8, #98c7e6ee), url("../assets/abstBack.svg") center/cover;
+  -webkit-box-shadow: inset -20px 0 25px -25px #00000036;
+          box-shadow: inset -20px 0 25px -25px #00000036;
+  -webkit-filter: hue-rotate(20deg);
+          filter: hue-rotate(20deg);
+  background-color: #b3e0ff;
   height: 100%;
   width: 100%;
-  background-color: #00000025;
-  opacity: 0;
-  -webkit-transition: opacity 0.4s ease;
-  transition: opacity 0.4s ease;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.btn::after {
+.services figure .img img {
+  width: 100%;
+  height: 400px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.services figure .contain {
+  margin: 0 5%;
+}
+
+.services figure .conTxt {
+  padding-bottom: 2rem;
+  height: 100%;
+  position: relative;
+}
+
+.services figure .conTxt h2 {
+  font-size: 2.5rem;
+  color: var(--primary);
+  -webkit-filter: hue-rotate(-10deg);
+          filter: hue-rotate(-10deg);
+  padding-top: 4rem;
+  padding-bottom: 1rem;
+  z-index: 50;
+  line-height: 2.5rem;
+  border-bottom: 1pt dotted #0000003b;
+}
+
+.services figure .conTxt .ltText {
+  margin-top: 2rem;
+  font-size: 1rem;
+  color: #666666;
+}
+
+.services figure .conTxt .ulCap {
+  margin-top: 2rem;
+  color: #606060;
+  font-weight: 600;
+}
+
+.services figure .conTxt ul {
+  margin-top: 1rem;
+  margin-left: 2.2rem;
+  color: #404040;
+  list-style-type: none;
+  list-style-image: url("../assets/WebIcons/Correct.svg");
+}
+
+.services figure .conTxt .btn {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  margin-top: 2rem;
+}
+
+.services figure .conTxt .price {
+  margin-top: 2rem;
+  font-size: 1rem;
+  font-weight: 400;
+  color: #404040;
+  line-height: 2rem;
+}
+
+.services figure .conTxt .price span {
+  color: #17a067;
+  font-weight: 700;
+  font-size: 2.5rem;
+}
+
+.services figure .conTxt .price span strong {
+  font-size: 1.5rem;
+}
+
+.services figure .conTxt .sm-text {
+  font-size: 0.8rem;
+  margin-top: 2rem;
+  color: #4040405e;
+}
+
+.services figure .hueChange {
+  -webkit-box-shadow: inset 20px 0 25px -25px #0000001f;
+          box-shadow: inset 20px 0 25px -25px #0000001f;
+  -webkit-filter: hue-rotate(-50deg) brightness(90%) contrast(120%);
+          filter: hue-rotate(-50deg) brightness(90%) contrast(120%);
+}
+
+.services figure .vpsCon .price span,
+.services figure .vpsCon h2 {
+  color: #11806f;
+}
+
+.services figure .vpsCon button {
+  background-color: #11806f;
+}
+
+@media (max-width: 1200px) {
+  .services figure .img img {
+    width: 80%;
+  }
+}
+
+@media (max-width: 820px) {
+  .services figure {
+    font-size: 0.8rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .services figure .ltText {
+    font-size: 0.8rem !important;
+  }
+  .services figure h2 {
+    font-size: 2rem !important;
+  }
+  .services figure .sm-text {
+    font-size: 0.6rem !important;
+  }
+  .services figure:nth-child(1) {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  .services figure .img {
+    padding: 2rem 1rem;
+    -webkit-box-shadow: inset 0 10px 25px -25px #00000036;
+            box-shadow: inset 0 10px 25px -25px #00000036;
+  }
+  .services figure .img img {
+    width: 100%;
+  }
+  .services figure .btn {
+    padding: 0.8rem 1.2rem;
+    font-size: 0.8rem;
+  }
+}
+
+@media (max-width: 435px) {
+  .services figure .price {
+    margin-bottom: 1.8rem;
+  }
+  .services figure .btn {
+    width: 100%;
+    margin-top: 0.8rem !important;
+  }
+}
+
+/* Services End */
+/* Extra Services */
+.otherService {
+  background-color: #ffffff;
+  color: #303030;
+  padding: 2rem 0;
+}
+
+.otherService h6 {
+  font-weight: 400;
+  font-size: 1rem;
+  color: #414141;
+}
+
+.otherService h2 {
+  font-size: 2.3rem;
+  line-height: 2rem;
+}
+
+.otherService h4 {
+  font-size: 1rem;
+  font-weight: 400;
+  color: #40404081;
+}
+
+.otherService ul {
+  margin-top: 1rem;
+  margin-left: 2.2rem;
+  color: #404040;
+  list-style-type: none;
+  list-style-image: url("../assets/WebIcons/Correct.svg");
+  text-align: left;
+}
+
+.otherService .price {
+  font-size: 2rem;
+  font-weight: 600;
+  letter-spacing: -1.6px;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+  color: #0cbd73;
+}
+
+.otherService .plansChart {
+  margin: 2rem 0;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(250px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: 2rem;
+}
+
+.otherService .plansChart .chart {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  overflow: hidden;
+  border-radius: 3pt;
+  padding: 2rem;
+  background-color: #ffffff;
+  -webkit-box-shadow: 0px 0px 80px -20px #0000002f;
+          box-shadow: 0px 0px 80px -20px #0000002f;
+  padding-bottom: 3rem;
+}
+
+.otherService .plansChart .chart h3 {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.otherService .plansChart .chart .btn {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  padding: 0.8rem 1.5rem;
+  font-size: 1rem;
+  background-color: #404040;
+  width: 100%;
   position: absolute;
   bottom: 0;
   left: 0;
   right: 0;
-  content: "";
-  display: block;
-  height: 5px;
-  width: 0%;
-  opacity: 0;
-  background-color: #00000046;
-  -webkit-transition: opacity 0.2s ease, width 0.4s ease;
-  transition: opacity 0.2s ease, width 0.4s ease;
+  border-radius: 0;
 }
 
-.btn:hover::before {
-  opacity: 1;
+.otherService .plansChart .chart .sm-text {
+  font-size: 0.8rem;
+  color: #686868ab;
+  margin-bottom: 2rem;
 }
 
-.btn:focus::after {
-  width: 100%;
-  opacity: 1;
+.otherService .plansChart .chart ul {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
-.btn:active {
-  -webkit-transform: translateY(2px);
-          transform: translateY(2px);
-  -webkit-box-shadow: 4px 0px 15px -5px #00000054;
-          box-shadow: 4px 0px 15px -5px #00000054;
-}
-
-.bg-none {
-  background-color: transparent;
-}
-
-.td-none {
-  text-decoration: none;
-}
-
-.shadow-none {
-  -webkit-box-shadow: none !important;
-          box-shadow: none !important;
-}
-
-.shadow-less {
-  -webkit-box-shadow: 5px 2px 20px -5px #00000049;
-          box-shadow: 5px 2px 20px -5px #00000049;
-}
-
-.btn-secondary {
-  background-color: var(--secondary) !important;
-}
+/* Extra Services End */
 /*# sourceMappingURL=main.css.map */
