--- a/stylesheet/main.scss
+++ b/stylesheet/main.scss
@@ -17,6 +17,83 @@ body {
   background-color: var(--bg-color);
   color: var(--txt-color);
 }
+/* Components */
+.btn {
+  border: none;
+  padding: 0.8rem 2rem;
+  font-size: 1rem;
+  color: #ffffff;
+  background-color: var(--primary);
+  border-radius: 4pt;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  box-shadow: 4px 5px 15px -5px #0000006c;
+  &::before {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    content: "";
+    display: block;
+    height: 100%;
+    width: 100%;
+    background-color: #00000025;
+    opacity: 0;
+    transition: opacity 0.4s ease;
+  }
+  &::after {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    content: "";
+    display: block;
+    height: 5px;
+    width: 0%;
+    opacity: 0;
+    background-color: #00000046;
+    transition: opacity 0.2s ease, width 0.4s ease;
+  }
+  &:hover {
+    &::before {
+      opacity: 1;
+    }
+  }
+  &:focus {
+    &::after {
+      width: 100%;
+      opacity: 1;
+    }
+  }
+  &:active {
+    transform: translateY(2px);
+    box-shadow: 4px 0px 15px -5px #00000054;
+  }
+}
+.bg-none {
+  background-color: transparent;
+}
+.td-none {
+  text-decoration: none;
+}
+.shadow-none {
+  box-shadow: none !important;
+}
+.shadow-less {
+  box-shadow: 5px 2px 20px -5px #00000049;
+}
+.btn-secondary {
+  background-color: var(--secondary) !important;
+}
+.txt-primary {
+  color: var(--primary) !important;
+}
+.btn-sm {
+  padding: 0.5rem 1.2rem !important;
+}
+/* Components End */
 header {
   z-index: 50;
   position: absolute;
@@ -80,6 +157,7 @@ header {
 .contain {
   margin: 0 10%;
 }
+/* Home */
 .hmPage {
   padding-top: 5rem;
   position: relative;
@@ -136,6 +214,7 @@ header {
   canvas {
     z-index: 1;
     position: absolute;
+    pointer-events: none;
   }
 }
 @media (max-width: 1616px) {
@@ -216,7 +295,6 @@ header {
     }
   }
 }
-
 @media (max-width: 900px) {
   header {
     img {
@@ -260,7 +338,6 @@ header {
     }
   }
 }
-
 @media (max-width: 800px) {
   header {
     nav {
@@ -340,7 +417,6 @@ header {
     }
   }
 }
-
 @media (max-width: 470px) {
   .hmPage {
     .hmContent {
@@ -398,7 +474,7 @@ header {
         margin: 0;
         margin-top: 1rem;
         font-size: 0.8rem;
-        padding: .6rem 1rem;
+        padding: 0.6rem 1rem;
       }
     }
     .artwork {
@@ -409,77 +485,248 @@ header {
   }
 }
 @media (max-width: 230px) {
-  main{
+  main {
     display: none;
   }
 }
-
-.btn {
-  border: none;
-  padding: 0.8rem 2rem;
-  font-size: 1rem;
-  color: #ffffff;
-  background-color: var(--primary);
-  border-radius: 4pt;
-  cursor: pointer;
-  position: relative;
-  overflow: hidden;
-  box-shadow: 4px 5px 15px -5px #0000006c;
-  &::before {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    content: "";
-    display: block;
-    height: 100%;
-    width: 100%;
-    background-color: #00000025;
-    opacity: 0;
-    transition: opacity 0.4s ease;
-  }
-  &::after {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    content: "";
-    display: block;
-    height: 5px;
-    width: 0%;
-    opacity: 0;
-    background-color: #00000046;
-    transition: opacity 0.2s ease, width 0.4s ease;
-  }
-  &:hover {
-    &::before {
-      opacity: 1;
-    }
-  }
-  &:focus {
-    &::after {
+/* Home End */
+/* Services */
+.services {
+  width: 100%;
+  background-color: var(--bg-color);
+  figure {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    position: relative;
+    .img {
+      background: linear-gradient(#b3e1fff8, #98c7e6ee),
+        url("../assets/abstBack.svg") center/cover;
+      box-shadow: inset -20px 0 25px -25px #00000036;
+      filter: hue-rotate(20deg);
+      background-color: #b3e0ff;
+      height: 100%;
       width: 100%;
-      opacity: 1;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      img {
+        width: 100%;
+        height: 400px;
+        object-fit: contain;
+      }
+    }
+    background-color: #ffffff;
+    color: #242424;
+    .contain {
+      margin: 0 5%;
+    }
+    .conTxt {
+      padding-bottom: 2rem;
+      height: 100%;
+      position: relative;
+      h2 {
+        font-size: 2.5rem;
+        color: var(--primary);
+        filter: hue-rotate(-10deg);
+        padding-top: 4rem;
+        padding-bottom: 1rem;
+        z-index: 50;
+        line-height: 2.5rem;
+        border-bottom: 1pt dotted #0000003b;
+      }
+      .ltText {
+        margin-top: 2rem;
+        font-size: 1rem;
+        color: #666666;
+      }
+      .ulCap {
+        margin-top: 2rem;
+        color: #606060;
+        font-weight: 600;
+      }
+      ul {
+        margin-top: 1rem;
+        margin-left: 2.2rem;
+        color: #404040;
+        list-style-type: none;
+        list-style-image: url("../assets/WebIcons/Correct.svg");
+      }
+      .btn {
+        box-shadow: none;
+        margin-top: 2rem;
+      }
+      .price {
+        margin-top: 2rem;
+        font-size: 1rem;
+        font-weight: 400;
+        color: #404040;
+        line-height: 2rem;
+        span {
+          color: #17a067;
+          font-weight: 700;
+          font-size: 2.5rem;
+          strong {
+            font-size: 1.5rem;
+          }
+        }
+      }
+      .sm-text {
+        font-size: 0.8rem;
+        margin-top: 2rem;
+        color: #4040405e;
+      }
+    }
+    .hueChange {
+      box-shadow: inset 20px 0 25px -25px #0000001f;
+      filter: hue-rotate(-50deg) brightness(90%) contrast(120%);
+    }
+    .vpsCon {
+      .price span,
+      h2 {
+        color: #11806f;
+      }
+      button {
+        background-color: #11806f;
+      }
     }
   }
-  &:active {
-    transform: translateY(2px);
-    box-shadow: 4px 0px 15px -5px #00000054;
+}
+@media (max-width: 1200px) {
+  .services {
+    figure {
+      .img {
+        img {
+          width: 80%;
+        }
+      }
+    }
   }
 }
-.bg-none {
-  background-color: transparent;
+@media (max-width: 820px) {
+  .services {
+    figure {
+      font-size: 0.8rem;
+      .ltText {
+        font-size: 0.8rem !important;
+      }
+      h2 {
+        font-size: 2rem !important;
+      }
+      .sm-text {
+        font-size: 0.6rem !important;
+      }
+      &:nth-child(1) {
+        flex-direction: column-reverse;
+      }
+      display: flex;
+      flex-direction: column;
+      .img {
+        padding: 2rem 1rem;
+        box-shadow: inset 0 10px 25px -25px #00000036;
+        img {
+          width: 100%;
+        }
+      }
+      .btn {
+        padding: 0.8rem 1.2rem;
+        font-size: 0.8rem;
+      }
+    }
+  }
 }
-.td-none {
-  text-decoration: none;
+@media (max-width: 435px) {
+  .services {
+    figure {
+      .price {
+        margin-bottom: 1.8rem;
+      }
+      .btn {
+        width: 100%;
+        margin-top: 0.8rem !important;
+      }
+    }
+  }
 }
-.shadow-none {
-  box-shadow: none !important;
+/* Services End */
+/* Extra Services */
+.otherService {
+  background-color: #ffffff;
+  color: #303030;
+  padding: 2rem 0;
+  h6 {
+    font-weight: 400;
+    font-size: 1rem;
+    color: #414141;
+  }
+  h2 {
+    font-size: 2.3rem;
+    line-height: 2rem;
+  }
+  h4 {
+    font-size: 1rem;
+    font-weight: 400;
+    color: #40404081;
+  }
+  ul {
+    margin-top: 1rem;
+    margin-left: 2.2rem;
+    color: #404040;
+    list-style-type: none;
+    list-style-image: url("../assets/WebIcons/Correct.svg");
+    text-align: left;
+  }
+  .price {
+    font-size: 2rem;
+    font-weight: 600;
+    letter-spacing: -1.6px;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+    color: #0cbd73;
+  }
+  .plansChart {
+    margin: 2rem 0;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 2rem;
+    .chart {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      overflow: hidden;
+      h3 {
+        font-size: 1.5rem;
+        line-height: 2rem;
+      }
+      border-radius: 3pt;
+      padding: 2rem;
+      background-color: #ffffff;
+      box-shadow: 0px 0px 80px -20px #0000002f;
+      padding-bottom: 3rem;
+      .btn {
+        box-shadow: none;
+        padding: 0.8rem 1.5rem;
+        font-size: 1rem;
+        background-color: #404040;
+        width: 100%;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        border-radius: 0;
+      }
+      .sm-text {
+        font-size: 0.8rem;
+        color: #686868ab;
+        margin-bottom: 2rem;
+      }
+      ul {
+        margin-top: 2rem;
+        margin-bottom: 2rem;
+      }
+    }
+  }
 }
-.shadow-less {
-  box-shadow: 5px 2px 20px -5px #00000049;
-}
-.btn-secondary {
-  background-color: var(--secondary) !important;
-}
+/* Extra Services End */
