--- a/stylesheet/main.scss
+++ b/stylesheet/main.scss
@@ -164,7 +164,7 @@ header {
   background: url(../assets/BG.webp) center/cover no-repeat;
   min-height: 700px;
   height: 100vh;
-  max-height: 800px;
+  max-height: 1080px;
   overflow: hidden;
   display: flex;
   flex-direction: row;
@@ -615,7 +615,7 @@ header {
       .sm-text {
         font-size: 0.6rem !important;
       }
-      &:nth-child(1) {
+      &:nth-child(2) {
         flex-direction: column-reverse;
       }
       display: flex;
@@ -647,13 +647,30 @@ header {
     }
   }
 }
+@media (max-width: 330px) {
+  .services figure .conTxt {
+    .price {
+      font-size: 0.9rem;
+      line-height: 1.4rem;
+      span {
+        color: #17a067;
+        font-weight: 700;
+        font-size: 1.5rem;
+        strong {
+          font-size: 1.5rem;
+        }
+      }
+    }
+  }
+}
 /* Services End */
 /* Extra Services */
 .otherService {
   background-color: #ffffff;
   color: #303030;
   padding: 2rem 0;
-  .contain{
+  padding-bottom: 5rem;
+  .contain {
     border-top: 1px dotted #00000025;
     padding-top: 1rem;
   }
@@ -686,40 +703,39 @@ header {
     margin-top: 2rem;
     margin-bottom: 1rem;
     color: #0cbd73;
+    text-align: center;
+    width: 100%;
   }
   .plansChart {
     margin: 2rem 0;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-gap: 2rem;
+    &:hover .chart {
+      filter: blur(5px);
+      transition: filter 0.8s ease 1.4s;
+    }
     .chart {
       position: relative;
       display: flex;
       flex-direction: column;
       justify-content: center;
-      align-items: center;
-      text-align: center;
-      overflow: hidden;
+      align-items: flex-start;
+      text-align: left;
+      border-radius: 4pt;
+      padding: 2rem;
+      background-color: #ffffff;
+      box-shadow: 0px 0px 80px -20px #0000002f;
       h3 {
         font-size: 1.5rem;
         line-height: 2rem;
       }
-      border-radius: 3pt;
-      padding: 2rem;
-      background-color: #ffffff;
-      box-shadow: 0px 0px 80px -20px #0000002f;
-      padding-bottom: 3rem;
       .btn {
         box-shadow: none;
-        padding: 0.8rem 1.5rem;
+        padding: 0.7rem 2rem;
         font-size: 1rem;
         background-color: #404040;
         width: 100%;
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        border-radius: 0;
       }
       .sm-text {
         font-size: 0.8rem;
@@ -730,7 +746,358 @@ header {
         margin-top: 2rem;
         margin-bottom: 2rem;
       }
+      .xsm-text {
+        font-size: 1.2rem;
+        letter-spacing: 0px;
+      }
+      .price {
+        color: #404040;
+      }
+      transition: transform 0.8s ease 0.2s, filter 0.8s ease 0s;
+      &:hover {
+        filter: blur(0);
+        transform: scale(1.2);
+        z-index: 100;
+        transition: transform 0.8s ease 1.4s, zindex 0s ease 0.8s;
+      }
+    }
+    .Premium {
+      position: relative;
+      color: var(--primary);
+      .btn {
+        background-color: var(--primary);
+      }
+      .price {
+        color: var(--primary);
+      }
+      &::before {
+        content: attr(data-badge);
+        background-color: #0cbd73;
+        color: #ffffff;
+        padding: 0 1rem;
+        border-radius: 3pt;
+        position: absolute;
+        top: 0;
+        left: 0;
+        transform: translate(20px, -10px);
+      }
+    }
+  }
+}
+@media (max-width: 800px) {
+  .otherService {
+    .contain {
+      margin: 0 5%;
+    }
+    h6 {
+      font-size: 0.9rem;
+    }
+    h2 {
+      font-size: 2rem;
+    }
+    ul {
+      font-size: 0.8rem;
+    }
+    .plansChart .chart .btn {
+      font-size: 0.9rem;
+    }
+  }
+}
+@media (max-width: 700px) {
+  .otherService {
+    .plansChart {
+      &:hover .chart {
+        filter: none;
+      }
+      .chart {
+        &:hover {
+          filter: blur(0);
+          transform: none;
+        }
+      }
+    }
+  }
+}
+@media (max-width: 330px) {
+  .otherService {
+    .plansChart {
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      .price {
+        font-size: 1.5rem;
+        text-align: center;
+        width: 100%;
+        .xsm-text {
+          font-size: 1rem;
+        }
+      }
     }
   }
 }
 /* Extra Services End */
+/* Banner for Contact Us */
+.bannerContact {
+  background: url("../assets/ContactUsBack.webp") center/cover no-repeat fixed;
+  padding: 4rem 10%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  h2 {
+    font-size: 1.8rem;
+  }
+  h5 {
+    font-weight: 400;
+    opacity: 0.8;
+    width: 650px;
+  }
+  .btn {
+    background-color: #ffffff;
+    color: #404040;
+    font-weight: 700;
+  }
+}
+@media (max-width: 1100px) {
+  .bannerContact {
+    h2 {
+      font-size: 1.5rem;
+    }
+    h5 {
+      font-size: 0.8rem;
+      width: 500px;
+    }
+  }
+}
+@media (max-width: 925px) {
+  .bannerContact {
+    h2 {
+      font-size: 1.2rem;
+    }
+    h5 {
+      font-size: 0.8rem;
+      width: 400px;
+      line-height: 0.9rem;
+      margin-top: 0.5rem;
+    }
+  }
+}
+@media (max-width: 825px) {
+  .bannerContact {
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    h2 {
+      line-height: 1.5rem;
+      font-size: 1.5rem;
+    }
+    h5 {
+      font-size: 0.8rem;
+      width: 100%;
+      margin-bottom: 2rem;
+    }
+    .btn {
+      font-size: 0.9rem;
+      padding: 0.8rem 1.8rem;
+    }
+  }
+}
+@media (max-width: 350px) {
+  .bannerContact {
+    text-align: left;
+    .btn {
+      width: 100%;
+    }
+  }
+}
+/* Banner for Contact Us End */
+/* Customers Page */
+.customers {
+  background-color: #ffffff;
+  padding: 4rem 10%;
+  color: #404040;
+  h2 {
+    font-weight: 600;
+    font-size: 1.4rem;
+    margin-bottom: 3rem;
+  }
+  .gridCus {
+    padding: 0 1rem;
+    margin: 2rem 0;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    grid-gap: 2rem;
+    img {
+      filter: grayscale(1);
+      width: 100%;
+      height: 100px;
+      object-fit: contain;
+      transition: filter 0.4s ease, transform 0.4s ease;
+      &:hover,
+      &:focus {
+        filter: grayscale(0);
+        transform: scale(1.2);
+      }
+    }
+  }
+}
+@media (max-width: 500px) {
+  .customers {
+    .gridCus {
+      grid-template-columns: repeat(auto-fill, minmax(52px, 1fr));
+    }
+  }
+}
+/* Customers Page End */
+/* Footer */
+footer {
+  background: linear-gradient(#242424ee, #242424e5),
+    url("../assets/wiggle.svg") center/cover;
+  padding: 4rem 10%;
+  display: grid;
+  grid-template-columns: 200px repeat(4, 1fr);
+  grid-gap: 2rem;
+  div {
+    display: flex;
+    flex-direction: column;
+    &:nth-child(1) {
+      justify-content: center;
+      align-items: center;
+      .logoP {
+        width: 210px;
+        padding: 0 2rem;
+        opacity: 0.7;
+        transition: opacity 0.4s ease;
+        &:hover {
+          opacity: 1;
+        }
+      }
+      span {
+        margin-top: 1rem;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        a {
+          width: fit-content;
+          img {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 24px;
+            margin-right: 1rem;
+            opacity: 0.4;
+            transition: opacity 0.4s ease;
+            &:hover {
+              opacity: 1;
+            }
+          }
+        }
+      }
+    }
+    &:nth-child(2),
+    &:nth-child(3),
+    &:nth-child(4),
+    &:nth-child(5) {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: center;
+      a {
+        font-size: 1rem;
+        color: #ffffffe0;
+        cursor: pointer;
+        opacity: 0.7;
+        text-decoration: underline;
+        transition: opacity 0.2s ease;
+        &:hover {
+          opacity: 1;
+        }
+      }
+    }
+  }
+}
+.footerDown {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 1.3rem 10%;
+  background-color: #202020;
+  font-size: 0.85rem;
+  color: #ffffff;
+  a {
+    color: #ffffff;
+  }
+  p,
+  a {
+    opacity: 0.4;
+  }
+}
+@media (max-width: 1300px) {
+  footer {
+    grid-template-columns: 200px repeat(3, 1fr);
+    div {
+      &:nth-child(2) {
+        display: none;
+      }
+    }
+  }
+}
+@media (max-width: 1065px) {
+  footer {
+    grid-template-columns: none;
+    grid-template-areas:
+      "img . ."
+      "th fr fv";
+    div {
+      &:nth-child(2) {
+        display: none;
+      }
+      &:nth-child(1) {
+        display: flex;
+        justify-content: flex-start;
+        align-items: flex-start;
+        grid-area: img;
+        .logoP {
+          width: 200px;
+          padding: 0;
+        }
+      }
+      &:nth-child(3) {
+        grid-area: th;
+      }
+      &:nth-child(4) {
+        grid-area: fr;
+      }
+      &:nth-child(5) {
+        grid-area: fv;
+      }
+    }
+  }
+}
+@media (max-width: 1065px) {
+  footer {
+    grid-template-columns: none;
+    grid-template-areas:
+      "img"
+      "th"
+      "fr"
+      "fv";
+  }
+}
+@media (max-width: 800px) {
+  footer {
+    div {
+      a {
+        font-size: 0.8rem !important;
+      }
+    }
+  }
+  .footerDown {
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    font-size: 0.7rem !important;
+    a {
+      margin-top: 0.2rem;
+    }
+  }
+}
+/* Footer End */
