--- a/stylesheet/main.css
+++ b/stylesheet/main.css
@@ -211,7 +211,7 @@ header nav .active::before {
   background: url(../assets/BG.webp) center/cover no-repeat;
   min-height: 700px;
   height: 100vh;
-  max-height: 800px;
+  max-height: 1080px;
   overflow: hidden;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -713,7 +713,7 @@ header nav .active::before {
   .services figure .sm-text {
     font-size: 0.6rem !important;
   }
-  .services figure:nth-child(1) {
+  .services figure:nth-child(2) {
     -webkit-box-orient: vertical;
     -webkit-box-direction: reverse;
         -ms-flex-direction: column-reverse;
@@ -743,12 +743,28 @@ header nav .active::before {
   }
 }
 
+@media (max-width: 330px) {
+  .services figure .conTxt .price {
+    font-size: 0.9rem;
+    line-height: 1.4rem;
+  }
+  .services figure .conTxt .price span {
+    color: #17a067;
+    font-weight: 700;
+    font-size: 1.5rem;
+  }
+  .services figure .conTxt .price span strong {
+    font-size: 1.5rem;
+  }
+}
+
 /* Services End */
 /* Extra Services */
 .otherService {
   background-color: #ffffff;
   color: #303030;
   padding: 2rem 0;
+  padding-bottom: 5rem;
 }
 
 .otherService .contain {
@@ -789,15 +805,26 @@ header nav .active::before {
   margin-top: 2rem;
   margin-bottom: 1rem;
   color: #0cbd73;
+  text-align: center;
+  width: 100%;
 }
 
 .otherService .plansChart {
   margin: 2rem 0;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (minmax(250px, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  -ms-grid-columns: (minmax(300px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-gap: 2rem;
+}
+
+.otherService .plansChart:hover .chart {
+  -webkit-filter: blur(5px);
+          filter: blur(5px);
+  -webkit-transition: -webkit-filter 0.8s ease 1.4s;
+  transition: -webkit-filter 0.8s ease 1.4s;
+  transition: filter 0.8s ease 1.4s;
+  transition: filter 0.8s ease 1.4s, -webkit-filter 0.8s ease 1.4s;
 }
 
 .otherService .plansChart .chart {
@@ -812,17 +839,19 @@ header nav .active::before {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  text-align: center;
-  overflow: hidden;
-  border-radius: 3pt;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  text-align: left;
+  border-radius: 4pt;
   padding: 2rem;
   background-color: #ffffff;
   -webkit-box-shadow: 0px 0px 80px -20px #0000002f;
           box-shadow: 0px 0px 80px -20px #0000002f;
-  padding-bottom: 3rem;
+  -webkit-transition: -webkit-transform 0.8s ease 0.2s, -webkit-filter 0.8s ease 0s;
+  transition: -webkit-transform 0.8s ease 0.2s, -webkit-filter 0.8s ease 0s;
+  transition: transform 0.8s ease 0.2s, filter 0.8s ease 0s;
+  transition: transform 0.8s ease 0.2s, filter 0.8s ease 0s, -webkit-transform 0.8s ease 0.2s, -webkit-filter 0.8s ease 0s;
 }
 
 .otherService .plansChart .chart h3 {
@@ -833,15 +862,10 @@ header nav .active::before {
 .otherService .plansChart .chart .btn {
   -webkit-box-shadow: none;
           box-shadow: none;
-  padding: 0.8rem 1.5rem;
+  padding: 0.7rem 2rem;
   font-size: 1rem;
   background-color: #404040;
   width: 100%;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  border-radius: 0;
 }
 
 .otherService .plansChart .chart .sm-text {
@@ -855,5 +879,466 @@ header nav .active::before {
   margin-bottom: 2rem;
 }
 
+.otherService .plansChart .chart .xsm-text {
+  font-size: 1.2rem;
+  letter-spacing: 0px;
+}
+
+.otherService .plansChart .chart .price {
+  color: #404040;
+}
+
+.otherService .plansChart .chart:hover {
+  -webkit-filter: blur(0);
+          filter: blur(0);
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+  z-index: 100;
+  -webkit-transition: zindex 0s ease 0.8s, -webkit-transform 0.8s ease 1.4s;
+  transition: zindex 0s ease 0.8s, -webkit-transform 0.8s ease 1.4s;
+  transition: transform 0.8s ease 1.4s, zindex 0s ease 0.8s;
+  transition: transform 0.8s ease 1.4s, zindex 0s ease 0.8s, -webkit-transform 0.8s ease 1.4s;
+}
+
+.otherService .plansChart .Premium {
+  position: relative;
+  color: var(--primary);
+}
+
+.otherService .plansChart .Premium .btn {
+  background-color: var(--primary);
+}
+
+.otherService .plansChart .Premium .price {
+  color: var(--primary);
+}
+
+.otherService .plansChart .Premium::before {
+  content: attr(data-badge);
+  background-color: #0cbd73;
+  color: #ffffff;
+  padding: 0 1rem;
+  border-radius: 3pt;
+  position: absolute;
+  top: 0;
+  left: 0;
+  -webkit-transform: translate(20px, -10px);
+          transform: translate(20px, -10px);
+}
+
+@media (max-width: 800px) {
+  .otherService .contain {
+    margin: 0 5%;
+  }
+  .otherService h6 {
+    font-size: 0.9rem;
+  }
+  .otherService h2 {
+    font-size: 2rem;
+  }
+  .otherService ul {
+    font-size: 0.8rem;
+  }
+  .otherService .plansChart .chart .btn {
+    font-size: 0.9rem;
+  }
+}
+
+@media (max-width: 700px) {
+  .otherService .plansChart:hover .chart {
+    -webkit-filter: none;
+            filter: none;
+  }
+  .otherService .plansChart .chart:hover {
+    -webkit-filter: blur(0);
+            filter: blur(0);
+    -webkit-transform: none;
+            transform: none;
+  }
+}
+
+@media (max-width: 330px) {
+  .otherService .plansChart {
+    -ms-grid-columns: (minmax(200px, 1fr))[auto-fit];
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  }
+  .otherService .plansChart .price {
+    font-size: 1.5rem;
+    text-align: center;
+    width: 100%;
+  }
+  .otherService .plansChart .price .xsm-text {
+    font-size: 1rem;
+  }
+}
+
 /* Extra Services End */
+/* Banner for Contact Us */
+.bannerContact {
+  background: url("../assets/ContactUsBack.webp") center/cover no-repeat fixed;
+  padding: 4rem 10%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.bannerContact h2 {
+  font-size: 1.8rem;
+}
+
+.bannerContact h5 {
+  font-weight: 400;
+  opacity: 0.8;
+  width: 650px;
+}
+
+.bannerContact .btn {
+  background-color: #ffffff;
+  color: #404040;
+  font-weight: 700;
+}
+
+@media (max-width: 1100px) {
+  .bannerContact h2 {
+    font-size: 1.5rem;
+  }
+  .bannerContact h5 {
+    font-size: 0.8rem;
+    width: 500px;
+  }
+}
+
+@media (max-width: 925px) {
+  .bannerContact h2 {
+    font-size: 1.2rem;
+  }
+  .bannerContact h5 {
+    font-size: 0.8rem;
+    width: 400px;
+    line-height: 0.9rem;
+    margin-top: 0.5rem;
+  }
+}
+
+@media (max-width: 825px) {
+  .bannerContact {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  .bannerContact h2 {
+    line-height: 1.5rem;
+    font-size: 1.5rem;
+  }
+  .bannerContact h5 {
+    font-size: 0.8rem;
+    width: 100%;
+    margin-bottom: 2rem;
+  }
+  .bannerContact .btn {
+    font-size: 0.9rem;
+    padding: 0.8rem 1.8rem;
+  }
+}
+
+@media (max-width: 350px) {
+  .bannerContact {
+    text-align: left;
+  }
+  .bannerContact .btn {
+    width: 100%;
+  }
+}
+
+/* Banner for Contact Us End */
+/* Customers Page */
+.customers {
+  background-color: #ffffff;
+  padding: 4rem 10%;
+  color: #404040;
+}
+
+.customers h2 {
+  font-weight: 600;
+  font-size: 1.4rem;
+  margin-bottom: 3rem;
+}
+
+.customers .gridCus {
+  padding: 0 1rem;
+  margin: 2rem 0;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(150px, 1fr))[auto-fill];
+      grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  grid-gap: 2rem;
+}
+
+.customers .gridCus img {
+  -webkit-filter: grayscale(1);
+          filter: grayscale(1);
+  width: 100%;
+  height: 100px;
+  -o-object-fit: contain;
+     object-fit: contain;
+  -webkit-transition: -webkit-filter 0.4s ease, -webkit-transform 0.4s ease;
+  transition: -webkit-filter 0.4s ease, -webkit-transform 0.4s ease;
+  transition: filter 0.4s ease, transform 0.4s ease;
+  transition: filter 0.4s ease, transform 0.4s ease, -webkit-filter 0.4s ease, -webkit-transform 0.4s ease;
+}
+
+.customers .gridCus img:hover, .customers .gridCus img:focus {
+  -webkit-filter: grayscale(0);
+          filter: grayscale(0);
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+@media (max-width: 500px) {
+  .customers .gridCus {
+    -ms-grid-columns: (minmax(52px, 1fr))[auto-fill];
+        grid-template-columns: repeat(auto-fill, minmax(52px, 1fr));
+  }
+}
+
+/* Customers Page End */
+/* Footer */
+footer {
+  background: -webkit-gradient(linear, left top, left bottom, from(#242424ee), to(#242424e5)), url("../assets/wiggle.svg") center/cover;
+  background: linear-gradient(#242424ee, #242424e5), url("../assets/wiggle.svg") center/cover;
+  padding: 4rem 10%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 200px (1fr)[4];
+      grid-template-columns: 200px repeat(4, 1fr);
+  grid-gap: 2rem;
+}
+
+footer div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+footer div:nth-child(1) {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+footer div:nth-child(1) .logoP {
+  width: 210px;
+  padding: 0 2rem;
+  opacity: 0.7;
+  -webkit-transition: opacity 0.4s ease;
+  transition: opacity 0.4s ease;
+}
+
+footer div:nth-child(1) .logoP:hover {
+  opacity: 1;
+}
+
+footer div:nth-child(1) span {
+  margin-top: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+footer div:nth-child(1) span a {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+footer div:nth-child(1) span a img {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 24px;
+  margin-right: 1rem;
+  opacity: 0.4;
+  -webkit-transition: opacity 0.4s ease;
+  transition: opacity 0.4s ease;
+}
+
+footer div:nth-child(1) span a img:hover {
+  opacity: 1;
+}
+
+footer div:nth-child(2), footer div:nth-child(3), footer div:nth-child(4), footer div:nth-child(5) {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+footer div:nth-child(2) a, footer div:nth-child(3) a, footer div:nth-child(4) a, footer div:nth-child(5) a {
+  font-size: 1rem;
+  color: #ffffffe0;
+  cursor: pointer;
+  opacity: 0.7;
+  text-decoration: underline;
+  -webkit-transition: opacity 0.2s ease;
+  transition: opacity 0.2s ease;
+}
+
+footer div:nth-child(2) a:hover, footer div:nth-child(3) a:hover, footer div:nth-child(4) a:hover, footer div:nth-child(5) a:hover {
+  opacity: 1;
+}
+
+.footerDown {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 1.3rem 10%;
+  background-color: #202020;
+  font-size: 0.85rem;
+  color: #ffffff;
+}
+
+.footerDown a {
+  color: #ffffff;
+}
+
+.footerDown p,
+.footerDown a {
+  opacity: 0.4;
+}
+
+@media (max-width: 1300px) {
+  footer {
+    -ms-grid-columns: 200px (1fr)[3];
+        grid-template-columns: 200px repeat(3, 1fr);
+  }
+  footer div:nth-child(2) {
+    display: none;
+  }
+}
+
+@media (max-width: 1065px) {
+  footer {
+    -ms-grid-columns: none;
+        grid-template-columns: none;
+        grid-template-areas: "img . ." "th fr fv";
+  }
+  footer div:nth-child(2) {
+    display: none;
+  }
+  footer div:nth-child(1) {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    grid-area: img;
+  }
+  footer div:nth-child(1) .logoP {
+    width: 200px;
+    padding: 0;
+  }
+  footer div:nth-child(3) {
+    -ms-grid-row: 2;
+    -ms-grid-column: 1;
+    grid-area: th;
+  }
+  footer div:nth-child(4) {
+    -ms-grid-row: 2;
+    -ms-grid-column: 2;
+    grid-area: fr;
+  }
+  footer div:nth-child(5) {
+    -ms-grid-row: 2;
+    -ms-grid-column: 3;
+    grid-area: fv;
+  }
+}
+
+@media (max-width: 1065px) {
+  footer {
+    -ms-grid-columns: none;
+        grid-template-columns: none;
+        grid-template-areas: "img" "th" "fr" "fv";
+  }
+}
+
+@media (max-width: 800px) {
+  footer div a {
+    font-size: 0.8rem !important;
+  }
+  .footerDown {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    text-align: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    font-size: 0.7rem !important;
+  }
+  .footerDown a {
+    margin-top: 0.2rem;
+  }
+}
+
+/* Footer End */
 /*# sourceMappingURL=main.css.map */
