--- a/stylesheet/main.scss
+++ b/stylesheet/main.scss
@@ -1022,13 +1022,9 @@ footer {
   padding: 1.3rem 10%;
   background-color: #202020;
   font-size: 0.85rem;
-  color: #ffffff;
+  color: #ffffff70;
   a {
-    color: #ffffff;
-  }
-  p,
-  a {
-    opacity: 0.4;
+    color: #ffffff70;
   }
 }
 @media (max-width: 1300px) {
