--- a/stylesheet/main.scss
+++ b/stylesheet/main.scss
@@ -17,6 +17,11 @@ body {
   background-color: var(--bg-color);
   color: var(--txt-color);
   overflow-x: hidden;
+  h1 {
+    opacity: 0;
+    position: absolute;
+    left: -999999999%;
+  }
 }
 /* Components */
 .btn {
