--- a/stylesheet/main.css
+++ b/stylesheet/main.css
@@ -22,6 +22,12 @@ body {
   overflow-x: hidden;
 }
 
+body h1 {
+  opacity: 0;
+  position: absolute;
+  left: -999999999%;
+}
+
 /* Components */
 .btn {
   border: none;
